fix: address reviewer feedback — non-blocking poll, snapshot safety, cooldown, ANSI sanitization
- Move pollMcpStatus() from render path to background status-ticker thread
  using a dedicated DaemonConnection (prevents UI freeze on slow health RPC)
- bridgedTools() returns List.copyOf snapshot instead of unmodifiableList
  wrapper (prevents ConcurrentModificationException during reconnect)
- Record lastReconnectAttemptMillis on initial startup failure so the first
  background refresh honors the 30s cooldown instead of retrying immediately
- Sanitize server name and status via normalizeStatusPanelField() before
  ANSI rendering to prevent escape sequence injection in the TUI panel

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>